--- a/package.json
+++ b/package.json
@@ -5,7 +5,6 @@
   "scripts": {},
   "dependencies": {
     "bootstrap": "^4.0.0",
-    "jquery": "^3.3.1",
-    "tooltip.js": "^1.2.0"
+    "jquery": "^3.3.1"
   }
 }
