--- a/.travis.yml
+++ b/.travis.yml
@@ -8,7 +8,7 @@ install:
 after_success:
  — firebase deploy — project 
 miniprojekt-ca365 — token $FIREBASE_TOKEN.
-# blocklist
+# safelist
 branches:
   only:
   - firebase
